--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
   <div class="comanda">
     <div class="header">
-      <img src="logo.png" alt="Arena Sport & Cozinha" />
+      <img src="logo.jpg" alt="Arena Sport & Cozinha" />
       <h1>Comanda de Consumo</h1>
     </div>
     <div class="info">
@@ -211,3 +211,4 @@
   </div>
 </body>
 </html>
+
